--- a/src/Services/ContactService/SkyWheels.Contact.API/SkyWheels.Contact.API.csproj
+++ b/src/Services/ContactService/SkyWheels.Contact.API/SkyWheels.Contact.API.csproj
@@ -7,7 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.1.35" />
+    <PackageReference Include="FluentValidation" Version="11.11.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.0" />
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.2" />
   </ItemGroup>
 
 </Project>
